REFACTOR: rename greeter to User
