# openapi.yaml
@@ -3,15 +3,15 @@
 
 openapi: 3.0.3
 info:
-    title: Greeter API
+    title: User API
     description: The greeting service definition.
     version: 0.0.1
 paths:
     /login:
         post:
             tags:
-                - Greeter
-            operationId: Greeter_LogIn
+                - User
+            operationId: User_LogIn
             requestBody:
                 content:
                     application/json:
@@ -34,9 +34,9 @@ paths:
     /signup:
         post:
             tags:
-                - Greeter
+                - User
             description: Sends a greeting
-            operationId: Greeter_SignUp
+            operationId: User_SignUp
             requestBody:
                 content:
                     application/json:
@@ -109,4 +109,4 @@ components:
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
 tags:
-    - name: Greeter
+    - name: User
